2008-01-11 Andrew J. Schorr <ajschorr@alumni.princeton.edu>

	* zebra.h: Revert previous change, no need to include <net/if_media.h>
	  here.

2008-01-10 Ingo Flaschberger <if@xip.at>

	* zebra.h: If HAVE_BSD_LINK_DETECT is defined, include <net/if_media.h>.

2008-01-08 Pavol Rusnak <prusnak@suse.cz>

	* memory.c: (mtype_memstr) Fix accidental shift past width of type,
	  constant should have been forced to UL, rather than being left to
	  default to int.

2007-11-12 Denis Ovsienko

	* linklist.c: (listnode_add_after) Don't forget to increment list
	  items counter.
	* workqueue.h: Changed working queue flags from enum into integer
	  and introduced WQ_AIM_HEAD flag to indicate our will to insert
	  new data before the list head.
	* workqueue.[ch]: (work_queue_schedule, show_work_queues,
	  work_queue_plug, work_queue_unplug) Adjust to the new flags style.
	* workqueue.[ch]: (work_queue_aim_head) new function to control the
	  WQ_AIM_HEAD flag
	* workqueue.[ch]: (work_queue_new) Explicitly set both WQ flags
	  during new WQ initialization.
	* workqueue.[ch]: (work_queue_add) If WQ_AIM_HEAD indicates a need
	  to place the new data into list head, do it.

2007-10-22 Lorenzo Colitti <lorenzo@colitti.com>

	* smux.c: (smux_stop) Avoid cancelling a defunct thread pointer
	  (smux_start) Stop smux before trying to start it, possibly again.

2007-10-04 Denis Ovsienko

	* pid_output.c: (pid_output) stop using LOGFILE_MASK
	  (0600 by default), introduce and use PIDFILE_MASK (0644)
	  instead.

2007-09-18  Paul Jakma <paul.jakma@sun.com>

	* privs.c: definition of ZCAP_NET_ADMIN on Solaris should
	  be PRIV_SYS_IP_CONFIG, when that's available. Thus allowing
	  Quagga to work with in Solaris zones with exclusive IP
	  instances.

2007-08-21 Denis Ovsienko

	* sockopt.[ch]: (setsockopt_so_sendbuf, getsockopt_so_sendbuf):
	  new functions to adjust ospfd working socket.

2007-08-13 Denis Ovsienko

	* zebra.h: introduce ZEBRA_ERR_KERNEL and ZEBRA_ERR_NOERROR
